# TFY4235_Project2

./: .gitignore
src/: CMakeLists.txt  main.cpp  plotter.py  potentials.hpp  rootfinding.py  timeEvolution.cpp  timeEvolution.hpp  utils.cpp  utils.hpp
